--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "start": "webpack-dev-server --open",
     "surge": "surge dist"
   },
   "repository": {
@@ -44,11 +45,15 @@
     "style-loader": "^1.0.1",
     "surge": "^0.21.3",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.16.0"
+    "melanke-watchjs": "^1.5.0",
+    "popper.js": "^1.16.0",
+    "validator": "^12.1.0"
   }
 }
