--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dist"
   ],
   "scripts": {
-    "test": "jest",
+    "build": "NODE_ENV=production npx webpack",
     "start": "webpack-dev-server --open",
-    "surge": "surge dist"
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
@@ -31,19 +31,14 @@
     "@babel/node": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.3.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.1.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
     "style-loader": "^1.0.1",
-    "surge": "^0.21.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
@@ -51,7 +46,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "i18next": "^19.1.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "melanke-watchjs": "^1.5.0",
     "popper.js": "^1.16.0",
     "validator": "^12.1.0"
