--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,5 @@
 ---
+root: true
 
 plugins:
   - babel
@@ -7,7 +8,7 @@ env:
   node: true
   browser: true
 
-parser: babel-eslint
+parser: '@babel/eslint-parser'
 
 extends:
   - 'airbnb-base'
