--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "NODE_ENV=production npx webpack",
-    "now-build": "rm -rf dist && mkdir dist && echo 'Custom Build' > ./dist/index.html",
+    "build": "rm -rf dist && NODE_ENV=production npx webpack",
     "start": "webpack-dev-server --open",
     "lint": "npx eslint ."
   },
