--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && NODE_ENV=production npx webpack",
-    "start": "webpack-dev-server --open",
+    "prebuild": "rm -rf dist",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --open --config webpack.dev.js",
     "lint": "npx eslint ."
   },
   "repository": {
@@ -28,9 +29,9 @@
   "devDependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.5.4",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
-    "@babel/eslint-parser": "^7.5.4",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.12.0",
@@ -41,7 +42,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "axios": "^0.26.1",
