--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,8 +10,17 @@ env:
 
 parser: '@babel/eslint-parser'
 
+parserOptions:
+  ecmaVersion: latest
+
 extends:
   - 'airbnb-base'
 
+settings:
+  import/resolver:
+    - node
+    - webpack
+
 rules:
+  import/extensions: 0
   no-console: 0
